src/test/ui/integer-literal-suffix-inference.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:38:5
   |
LL |     id_i8(a16);
   |     ^^^^^^---^
   |           |
   |           expected `i8`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:41:5
   |
LL |     id_i8(a32);
   |     ^^^^^^---^
   |           |
   |           expected `i8`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:44:5
   |
LL |     id_i8(a64);
   |     ^^^^^^---^
   |           |
   |           expected `i8`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:47:5
   |
LL |     id_i8(asize);
   |     ^^^^^^-----^
   |           |
   |           expected `i8`, found `isize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:51:5
   |
LL |     id_i16(a8);
   |     ^^^^^^^--^
   |            |
   |            expected `i16`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:55:5
   |
LL |     id_i16(a32);
   |     ^^^^^^^---^
   |            |
   |            expected `i16`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:58:5
   |
LL |     id_i16(a64);
   |     ^^^^^^^---^
   |            |
   |            expected `i16`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:61:5
   |
LL |     id_i16(asize);
   |     ^^^^^^^-----^
   |            |
   |            expected `i16`, found `isize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:65:5
   |
LL |     id_i32(a8);
   |     ^^^^^^^--^
   |            |
   |            expected `i32`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:68:5
   |
LL |     id_i32(a16);
   |     ^^^^^^^---^
   |            |
   |            expected `i32`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:72:5
   |
LL |     id_i32(a64);
   |     ^^^^^^^---^
   |            |
   |            expected `i32`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:75:5
   |
LL |     id_i32(asize);
   |     ^^^^^^^-----^
   |            |
   |            expected `i32`, found `isize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:79:5
   |
LL |     id_i64(a8);
   |     ^^^^^^^--^
   |            |
   |            expected `i64`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:82:5
   |
LL |     id_i64(a16);
   |     ^^^^^^^---^
   |            |
   |            expected `i64`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:85:5
   |
LL |     id_i64(a32);
   |     ^^^^^^^---^
   |            |
   |            expected `i64`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:89:5
   |
LL |     id_i64(asize);
   |     ^^^^^^^-----^
   |            |
   |            expected `i64`, found `isize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:93:5
   |
LL |     id_isize(a8);
   |     ^^^^^^^^^--^
   |              |
   |              expected `isize`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:19:8
   |
LL |     fn id_isize(n: isize) -> isize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_isize({isize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:96:5
   |
LL |     id_isize(a16);
   |     ^^^^^^^^^---^
   |              |
   |              expected `isize`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:19:8
   |
LL |     fn id_isize(n: isize) -> isize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_isize({isize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:99:5
   |
LL |     id_isize(a32);
   |     ^^^^^^^^^---^
   |              |
   |              expected `isize`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:19:8
   |
LL |     fn id_isize(n: isize) -> isize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_isize({isize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:102:5
   |
LL |     id_isize(a64);
   |     ^^^^^^^^^---^
   |              |
   |              expected `isize`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:19:8
   |
LL |     fn id_isize(n: isize) -> isize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_isize({isize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:108:5
   |
LL |     id_i8(c16);
   |     ^^^^^^---^
   |           |
   |           expected `i8`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:111:5
   |
LL |     id_i8(c32);
   |     ^^^^^^---^
   |           |
   |           expected `i8`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:114:5
   |
LL |     id_i8(c64);
   |     ^^^^^^---^
   |           |
   |           expected `i8`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:15:8
   |
LL |     fn id_i8(n: i8) -> i8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_i8({i8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:118:5
   |
LL |     id_i16(c8);
   |     ^^^^^^^--^
   |            |
   |            expected `i16`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:122:5
   |
LL |     id_i16(c32);
   |     ^^^^^^^---^
   |            |
   |            expected `i16`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:125:5
   |
LL |     id_i16(c64);
   |     ^^^^^^^---^
   |            |
   |            expected `i16`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:16:8
   |
LL |     fn id_i16(n: i16) -> i16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i16({i16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:129:5
   |
LL |     id_i32(c8);
   |     ^^^^^^^--^
   |            |
   |            expected `i32`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:132:5
   |
LL |     id_i32(c16);
   |     ^^^^^^^---^
   |            |
   |            expected `i32`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:136:5
   |
LL |     id_i32(c64);
   |     ^^^^^^^---^
   |            |
   |            expected `i32`, found `i64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:17:8
   |
LL |     fn id_i32(n: i32) -> i32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i32({i32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:140:5
   |
LL |     id_i64(a8);
   |     ^^^^^^^--^
   |            |
   |            expected `i64`, found `i8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:143:5
   |
LL |     id_i64(a16);
   |     ^^^^^^^---^
   |            |
   |            expected `i64`, found `i16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:146:5
   |
LL |     id_i64(a32);
   |     ^^^^^^^---^
   |            |
   |            expected `i64`, found `i32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:18:8
   |
LL |     fn id_i64(n: i64) -> i64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_i64({i64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:152:5
   |
LL |     id_u8(b16);
   |     ^^^^^^---^
   |           |
   |           expected `u8`, found `u16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:27:8
   |
LL |     fn id_u8(n: u8) -> u8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_u8({u8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:155:5
   |
LL |     id_u8(b32);
   |     ^^^^^^---^
   |           |
   |           expected `u8`, found `u32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:27:8
   |
LL |     fn id_u8(n: u8) -> u8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_u8({u8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:158:5
   |
LL |     id_u8(b64);
   |     ^^^^^^---^
   |           |
   |           expected `u8`, found `u64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:27:8
   |
LL |     fn id_u8(n: u8) -> u8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_u8({u8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:161:5
   |
LL |     id_u8(bsize);
   |     ^^^^^^-----^
   |           |
   |           expected `u8`, found `usize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:27:8
   |
LL |     fn id_u8(n: u8) -> u8 { n }
   |        ^^^^^ -----
help: provide an argument of the correct type
   |
LL |     id_u8({u8});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:165:5
   |
LL |     id_u16(b8);
   |     ^^^^^^^--^
   |            |
   |            expected `u16`, found `u8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:28:8
   |
LL |     fn id_u16(n: u16) -> u16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u16({u16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:169:5
   |
LL |     id_u16(b32);
   |     ^^^^^^^---^
   |            |
   |            expected `u16`, found `u32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:28:8
   |
LL |     fn id_u16(n: u16) -> u16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u16({u16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:172:5
   |
LL |     id_u16(b64);
   |     ^^^^^^^---^
   |            |
   |            expected `u16`, found `u64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:28:8
   |
LL |     fn id_u16(n: u16) -> u16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u16({u16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:175:5
   |
LL |     id_u16(bsize);
   |     ^^^^^^^-----^
   |            |
   |            expected `u16`, found `usize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:28:8
   |
LL |     fn id_u16(n: u16) -> u16 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u16({u16});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:179:5
   |
LL |     id_u32(b8);
   |     ^^^^^^^--^
   |            |
   |            expected `u32`, found `u8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:29:8
   |
LL |     fn id_u32(n: u32) -> u32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u32({u32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:182:5
   |
LL |     id_u32(b16);
   |     ^^^^^^^---^
   |            |
   |            expected `u32`, found `u16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:29:8
   |
LL |     fn id_u32(n: u32) -> u32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u32({u32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:186:5
   |
LL |     id_u32(b64);
   |     ^^^^^^^---^
   |            |
   |            expected `u32`, found `u64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:29:8
   |
LL |     fn id_u32(n: u32) -> u32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u32({u32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:189:5
   |
LL |     id_u32(bsize);
   |     ^^^^^^^-----^
   |            |
   |            expected `u32`, found `usize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:29:8
   |
LL |     fn id_u32(n: u32) -> u32 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u32({u32});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:193:5
   |
LL |     id_u64(b8);
   |     ^^^^^^^--^
   |            |
   |            expected `u64`, found `u8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:30:8
   |
LL |     fn id_u64(n: u64) -> u64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u64({u64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:196:5
   |
LL |     id_u64(b16);
   |     ^^^^^^^---^
   |            |
   |            expected `u64`, found `u16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:30:8
   |
LL |     fn id_u64(n: u64) -> u64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u64({u64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:199:5
   |
LL |     id_u64(b32);
   |     ^^^^^^^---^
   |            |
   |            expected `u64`, found `u32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:30:8
   |
LL |     fn id_u64(n: u64) -> u64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u64({u64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:203:5
   |
LL |     id_u64(bsize);
   |     ^^^^^^^-----^
   |            |
   |            expected `u64`, found `usize`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:30:8
   |
LL |     fn id_u64(n: u64) -> u64 { n }
   |        ^^^^^^ ------
help: provide an argument of the correct type
   |
LL |     id_u64({u64});
   |     ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:207:5
   |
LL |     id_usize(b8);
   |     ^^^^^^^^^--^
   |              |
   |              expected `usize`, found `u8`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:31:8
   |
LL |     fn id_usize(n: usize) -> usize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_usize({usize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:210:5
   |
LL |     id_usize(b16);
   |     ^^^^^^^^^---^
   |              |
   |              expected `usize`, found `u16`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:31:8
   |
LL |     fn id_usize(n: usize) -> usize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_usize({usize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:213:5
   |
LL |     id_usize(b32);
   |     ^^^^^^^^^---^
   |              |
   |              expected `usize`, found `u32`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:31:8
   |
LL |     fn id_usize(n: usize) -> usize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_usize({usize});
   |     ^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/integer-literal-suffix-inference.rs:216:5
   |
LL |     id_usize(b64);
   |     ^^^^^^^^^---^
   |              |
   |              expected `usize`, found `u64`
   |
note: function defined here
  --> $DIR/integer-literal-suffix-inference.rs:31:8
   |
LL |     fn id_usize(n: usize) -> usize { n }
   |        ^^^^^^^^ --------
help: provide an argument of the correct type
   |
LL |     id_usize({usize});
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 52 previous errors

For more information about this error, try `rustc --explain E0308`.
